4614.	[test]		Fixed an error in the sockaddr unit test. [RT #45146]

4613.	[func]		By default, the maximum size of a zone journal file
			is now twice the size of the zone's contents (there
			is little benefit to a journal larger than this).
			This can be overridden by setting "max-journal-size"
			to "unlimited" or to an explicit value up to 2G.
			Thanks to Tony Finch. [RT #38324]

4612.	[bug]		Silence 'may be use uninitalised' warning and simplify
			the code in lwres/getaddinfo:process_answer.
			[RT #45158]

4611.	[bug]		The default LMDB mapsize was too low and caused
			errors after few thousand zones were added using
			rndc addzone. A new config option "lmdb-mapsize"
			has been introduced to configure the LMDB
			mapsize depending on operational needs.
			[RT #44954]

4610.	[func]		The "new-zones-directory" option specifies the
			location of NZF or NZD files for storing
			configuration of zones added by "rndc addzone".
			Thanks to Petr Menšík. [RT #44853]

4609.	[cleanup]	Rearrange makefiles to enable parallel execution
			(i.e. "make -j"). [RT #45078]

4608.	[func]		DiG now warns about .local queries which are reserved
			for Multicast DNS. [RT #44783]

4607.	[bug]		The memory context's malloced and maxmalloced counters
			were being updated without the appropriate lock being
			held.  [RT #44869]

4606.	[port]		Stop using experimental "Experimental keys on scalar"
			feature of perl as it has been removed. [RT #45012]

4605.	[performance]	Improve performance for delegation heavy answers
			and also general query performance. Removes the
			acache feature that didn't significantly improve
			performance. Adds a glue cache. Removes
			additional-from-cache and additional-from-auth
			features. Enables minimal-responses by
			default. Improves performance of compression
			code, owner case restoration, hash function,
			etc. Uses inline buffer implementation by
			default. Many other performance changes and fixes.
			[RT #44029]
